# mechinterp-env

./: Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  verify_tasks.py
data/circuits/: circuit_1.json  circuit_2.json  circuit_3.json
data/models/: __init__.py  model_1layer.py  model_2layer.py  model_4layer.py
server/: app.py  environment.py  graders.py  requirements.txt  rewards.py  tasks.py  transformer.py
